fix overflow button

--- a/frontend/src/app/components/card-generic/button/button.component.scss
+++ b/frontend/src/app/components/card-generic/button/button.component.scss
@@ -18,6 +18,9 @@ button {
 }
 
 
+.mat-icon-container {
+  overflow: hidden;
+}
 
 mat-icon {
   font-size: 3rem;
