--- a/frontend/src/app/components/card-generic/card-generic.component.scss
+++ b/frontend/src/app/components/card-generic/card-generic.component.scss
@@ -2,8 +2,8 @@
 :host {
   background: #fff;
   display: grid;
-  grid-template-columns: 3fr 0.7fr;
-  max-width: 600px;
+  grid-template-columns: 1fr 100px;
+
 }
 
 .main-part {
